I completed the general styling of the whole layout.

--- a/index.html
+++ b/index.html
@@ -1,174 +1,308 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix</title>
-    <link rel="stylesheet" href="css/mobile.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="css/mobile.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-    <!-- Header here -->
-    <div class="headerSection">
+  <body>
+    <div class="section">
+      <!-- Header here -->
+      <div class="headerSection">
         <div class="navBar">
-            <img src="img/Netflix-Logo.svg" alt="Netflix Logo" id="netflixLogo">
-            <button>Sign In</button>
+          <img src="img/Netflix-Logo.svg" alt="Netflix Logo" id="netflixLogo" />
+          <button>Sign In</button>
         </div>
-        <div class="wrapper header">
-            
-            <div class="welcomeIntro">
-                <p class="levelOneFontSize sixtyPercentWidth">Unlimited movies, TV shows and more.</p>
-                <p class="sixtyPercentWidth">Watch anywhere. cancel anytime.</p>
-                <p class="levelThreeFontSize sixtyPercentWidth">Ready to watch? Enter your email to create or restart your membership.</p>
-                <div class="signUpSection">
-                    <input type="text" value="Email address">
-                    <button>Get Started<img src="img/angle-right.svg" alt=""></button>
-                </div>
+        <div class="header">
+          <div class="welcomeIntro">
+            <h1>
+              Unlimited movies, TV <br />
+              shows and more.
+            </h1>
+            <p class="sixtyPercentWidth">Watch anywhere. cancel anytime.</p>
+            <h3>
+              Ready to watch? Enter your email to create or restart your
+              membership.
+            </h3>
+            <div class="signUpSection">
+              <input type="text" value="Email address" />
+              <button>
+                Get Started
+                <i class="bi bi-chevron-compact-right"></i>
+              </button>
             </div>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <!-- Streaming platforms -->
+      <!-- Streaming platforms -->
 
-    <div class="wrapper streamingPlatform">
+      <div class="wrapper streamingPlatform">
         <div class="streamingPlatformText">
-            <p class="levelOneFontSize">Enjoy on your TV.</p>
-            <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+          <h1>Enjoy on your TV.</h1>
+          <p>
+            Watch on Smart TVs, Playstation, Xbox, <br />Chromecast, Apple TV,
+            Blu-ray players, and <br />
+            more.
+          </p>
         </div>
         <div class="streamingPlatformImage">
-            <img src="img/tv.png" alt="Streaming on TV">
+          <div class="tvFrame">
+            <img src="img/tv.png" alt="" />
+          </div>
+          <div class="tvAnimation">
+            <video src="img/video.m4v" loop></video>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <!-- Download section -->
+      <!-- Download section -->
 
-    <div class="wrapper downloadSection">
-        <div class="downloadingVisual">
-            <!-- <img src="img/mobile.jpg" alt="Visual of Netflix on Mobile"> -->
-
-            <div id="downloadingAni">
-                <img src="img/boxshot.png" alt="Sample Movie poster">
-                <div>
-                    <P id="downloadingMovieTitle">Stranger Things</P>
-                    <P id="downloadingMovieStatus">Downloading...</P>
-                </div>
-                <img src="img/download.svg" alt="Downlading Progress" class="downloadingProgressIcon">
+      <div class="wrapper downloadSection">
+        <div class="downloadVisualAnimation">
+          <!-- <img src="img/mobile.jpg" alt="" class="downloadVisualAnimationBackground"> -->
+          <div class="downloadAnimationBox">
+            <img
+              src="img/boxshot.png"
+              alt="Sample Movie Poster"
+              class="sampleMoviePoster"
+            />
+            <div class="sampleMoviePosterText">
+              <div>
+                <p class="downloadMovieTitle">Stranger Things</p>
+                <p class="downloadingMovieStatus">Downloading...</p>
+              </div>
+              <div>
+                <img
+                  src="img/download.gif"
+                  alt="Downloading Animation"
+                  class="downloadAnimationGif"
+                />
+              </div>
             </div>
+          </div>
         </div>
+
         <div class="DownloadingVisualText">
-            <p class="levelOneFontSize">Download your shows to watch offline.</p>
-            <p>Save your favorites easily and always have something to watch.</p>
+          <h1>
+            Download your shows to watch offline.
+          </h1>
+          <p>
+            Save your favorites easily and always have <br />
+            something to watch.
+          </p>
         </div>
-    </div>
+      </div>
 
-    <!-- Watch Everywhere -->
+      <!-- Watch Everywhere -->
 
-    <div class="wrapper watchHere">
+      <div class="wrapper watchHere">
         <div>
-            <p class="levelOneFontSize">Watch everywhere.</p>
-            <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
+          <h1>Watch everywhere.</h1>
+          <p>
+            Stream unlimited movies and TV shows on your phone, tablet, laptop,
+            and TV.
+          </p>
         </div>
-    </div>
+      </div>
 
-    <!-- Create profiles for kids -->
+      <!-- Create profiles for kids -->
 
-    <div class="wrapper profileForKids">
-        <img src="img/Kids.png" alt="Sign up for kids">
+      <div class="wrapper profileForKids">
+        <img src="img/Kids.png" alt="Sign up for kids" />
         <div class="kidsSignupText">
-            <p class="levelOneFontSize">Create profiles for kids.</p>
-            <p>Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</p>
+          <h1>Create profiles for kids.</h1>
+          <p>
+            Send kids on adventures with their favorite characters in a space
+            made just for them—free with your membership.
+          </p>
         </div>
-    </div>
+      </div>
 
-    <!-- Frequently asked questions -->
+      <!-- Frequently asked questions -->
 
-    <div class="wrapper frequentlyAskedQuestions" id="frequentlyAskedQuestions">
-        <h1 class="levelingOneHeading">Frequently Asked Questions</h1>
+      <div
+        class="wrapper frequentlyAskedQuestions"
+        id="frequentlyAskedQuestions"
+      >
+        <h1>Frequently Asked Questions</h1>
         <div id="accordion">
-
-            <div class="questionOne">
-                <div class="Question">
-                    <p>What is Netflix?</p>
-                    <div class="expandOrClose"><img src="img/plus-icon.svg" alt="" id="questionOneIcon"></div>
-                </div>
-                <div class="answer" id="answerOne"> 
-                    <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.</p>
-                    <p>You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!</p>
-                </div>
-                <div></div>
+          <div class="questionOne">
+            <div class="Question">
+              <p>What is Netflix?</p>
+              <div class="expandOrClose">
+                <img src="img/plus-icon.svg" alt="" id="questionOneIcon" />
+              </div>
             </div>
-
-            <div class="questionTwo">
-                <div class="Question">
-                    <p>How much does Netflix cost?</p>
-                    <div class="expandOrClose"><img src="img/plus-icon.svg" alt="" id="questionTwoIcon"></div>
-                </div>
-                <div class="answer" id="answerTwo">
-                    <p>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₦1,200 to ₦4,400 a month. No extra costs, no contracts.</p>
-                </div>
-                <div></div>
+            <div class="answer" id="answerOne">
+              <p>
+                Netflix is a streaming service that offers a wide variety of
+                award-winning TV shows, movies, anime, documentaries, and more
+                on thousands of internet-connected devices.
+              </p>
+              <p>
+                You can watch as much as you want, whenever you want without a
+                single commercial – all for one low monthly price. There's
+                always something new to discover and new TV shows and movies are
+                added every week!
+              </p>
             </div>
+            <div></div>
+          </div>
 
-            <div class="questionThree">
-                <div class="Question">
-                    <p>Where can I watch?</p>
-                    <div class="expandOrClose"><img src="img/plus-icon.svg" alt="" id="questionThreeIcon"></div>
-                </div>
-                <div class="answer" id="answerThree">
-                    <p>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.</p>
-                    <p>You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</p>
-                </div>
-                <div></div>
+          <div class="questionTwo">
+            <div class="Question">
+              <p>How much does Netflix cost?</p>
+              <div class="expandOrClose">
+                <img src="img/plus-icon.svg" alt="" id="questionTwoIcon" />
+              </div>
             </div>
-
-            <div class="questionFour">
-                <div class="Question">
-                    <p>How do I cancel?</p>
-                    <div class="expandOrClose" ><img src="img/plus-icon.svg" alt="" id="questionFourIcon"></div>
-                </div>
-                <div class="answer" id="answerFour">
-                    <p>Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</p>
-                </div>
-                <div></div>
+            <div class="answer" id="answerTwo">
+              <p>
+                Watch Netflix on your smartphone, tablet, Smart TV, laptop, or
+                streaming device, all for one fixed monthly fee. Plans range
+                from ₦1,200 to ₦4,400 a month. No extra costs, no contracts.
+              </p>
             </div>
+            <div></div>
+          </div>
 
-            <div class="questionFive">
-                <div class="Question">
-                    <p>What can I watch on Neflix?</p>
-                    <div class="expandOrClose"><img src="img/plus-icon.svg" alt="" id="questionFiveIcon"></div>
-                </div>
-                <div class="answer" id="answerFive">
-                    <p>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
-                </div>
-                <div></div>
+          <div class="questionThree">
+            <div class="Question">
+              <p>Where can I watch?</p>
+              <div class="expandOrClose">
+                <img src="img/plus-icon.svg" alt="" id="questionThreeIcon" />
+              </div>
             </div>
-
-            <div class="questionSix">
-                <div class="Question">
-                    <p>Is Netflix good for kids?</p>
-                    <div class="expandOrClose" ><img src="img/plus-icon.svg" alt="" id="questionSixIcon"></div>
-                </div>
-                <div class="answer" id="answerSix">
-                    <p>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space.</p>
-                    <p>Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</p>
-                </div>
-                <div></div>
+            <div class="answer" id="answerThree">
+              <p>
+                Watch anywhere, anytime. Sign in with your Netflix account to
+                watch instantly on the web at netflix.com from your personal
+                computer or on any internet-connected device that offers the
+                Netflix app, including smart TVs, smartphones, tablets,
+                streaming media players and game consoles.
+              </p>
+              <p>
+                You can also download your favorite shows with the iOS, Android,
+                or Windows 10 app. Use downloads to watch while you're on the go
+                and without an internet connection. Take Netflix with you
+                anywhere.
+              </p>
             </div>
+            <div></div>
+          </div>
 
-            <p>Ready to watch? Enter your email to create or restart your membership.</p>
-
-            <div class="signUpSection">
-                <input type="text" value="Email address">
-                <button>Get Started<img src="img/angle-right.svg" alt=""></button>
+          <div class="questionFour">
+            <div class="Question">
+              <p>How do I cancel?</p>
+              <div class="expandOrClose">
+                <img src="img/plus-icon.svg" alt="" id="questionFourIcon" />
+              </div>
             </div>
+            <div class="answer" id="answerFour">
+              <p>
+                Netflix is flexible. There are no pesky contracts and no
+                commitments. You can easily cancel your account online in two
+                clicks. There are no cancellation fees – start or stop your
+                account anytime.
+              </p>
+            </div>
+            <div></div>
+          </div>
 
+          <div class="questionFive">
+            <div class="Question">
+              <p>What can I watch on Neflix?</p>
+              <div class="expandOrClose">
+                <img src="img/plus-icon.svg" alt="" id="questionFiveIcon" />
+              </div>
+            </div>
+            <div class="answer" id="answerFive">
+              <p>
+                Netflix has an extensive library of feature films,
+                documentaries, TV shows, anime, award-winning Netflix originals,
+                and more. Watch as much as you want, anytime you want.
+              </p>
+            </div>
+            <div></div>
+          </div>
+
+          <div class="questionSix">
+            <div class="Question">
+              <p>Is Netflix good for kids?</p>
+              <div class="expandOrClose">
+                <img src="img/plus-icon.svg" alt="" id="questionSixIcon" />
+              </div>
+            </div>
+            <div class="answer" id="answerSix">
+              <p>
+                The Netflix Kids experience is included in your membership to
+                give parents control while kids enjoy family-friendly TV shows
+                and movies in their own space.
+              </p>
+              <p>
+                Kids profiles come with PIN-protected parental controls that let
+                you restrict the maturity rating of content kids can watch and
+                block specific titles you don’t want kids to see.
+              </p>
+            </div>
+            <div></div>
+          </div>
         </div>
+        <div class="accordionSignUpSection">
+          <p class="levelThreeFontSize">
+            Ready to watch? Enter your email to create or restart your
+            membership.
+          </p>
+          <div class="signUpSection">
+            <input type="text" value="Email address" />
+            <button>
+              Get Started
+              <i class="bi bi-chevron-compact-right"></i>
+            </button>
+          </div>
+        </div>
+      </div>
 
+      <!-- Footer -->
+      <div class="wrapper footer">
+        <p>Questions? Contact us.</p>
+        <div class="siteMap">
+          <ul>
+            <li>FAQ</li>
+            <li>Investor Relations</li>
+            <li>Privacy</li>
+            <li>Speed Test</li>
+          </ul>
+          <ul>
+            <li>Help Center</li>
+            <li>Jobs</li>
+            <li>Cookie Preferences</li>
+            <li>Legal Notices</li>
+          </ul>
+          <ul>
+            <li>Account</li>
+            <li>Ways to Watch</li>
+            <li>Corporate Information</li>
+            <li>Only on Netflix</li>
+          </ul>
+          <ul>
+            <li>Center</li>
+            <li>Terms of Use</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
+        <p class="levelFourFontSize">Netflix Nigeria</p>
+      </div>
     </div>
-</body>
-<script src="js/javascript.js"></script>
+  </body>
+  <script src="js/javascript.js"></script>
 </html>
-
-<!-- Footer -->
