I fixed the tv frame and video layout issues.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <img src="img/tv.png" alt="" />
           </div>
           <div class="tvAnimation">
-            <video src="img/video.m4v" loop></video>
+            <video src="img/video.m4v" autoplay loop></video>
           </div>
         </div>
       </div>
